<resources>
    <string name="app_name">Applaudo\'s code challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="favorites">Favorites</string>
    <string name="closing_icon">closing_icon</string>
    <string name="trending_anime">Trending anime</string>
    <string name="on_air_anime">On air anime</string>
    <string name="anime_by_categories">Anime by categories</string>
    <string name="anime_streamers">Anime by streamers</string>
    <string name="article_poster_image">Article poster image</string>
    <string name="shadow_imageview">Shadow imageview</string>
    <string name="background_image_shadow">Background image shadow</string>
    <string name="trending_manga">Trending manga</string>
    <string name="on_air_manga">On air manga</string>
    <string name="finished_manga">Finished manga</string>
    <string name="manga_by_categories">Manga by categories</string>
    <string name="search">Search</string>
    <string name="title">Title:</string>
    <string name="canonical_title">Canonical title:</string>
    <string name="type">Type:</string>
    <string name="year">Year:</string>
    <string name="startdate_till_end_date">Startdate till end date</string>
    <string name="genres">Genres:</string>
    <string name="average_rating">Average rating:</string>
    <string name="episode_duration">Episode duration:</string>
    <string name="age_rating">Age rating:</string>
    <string name="airing_status">Airing status:</string>
    <string name="synopsis">Synopsis:</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="episodes">Episodes:</string>
    <string name="minutes_each"> minutes each</string>
    <string name="to">to</string>
    <string name="no_favorites_added">No favorites added</string>
    <string name="article_favorite_heart_icon">Favorite value</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="added_to_afvorites">Added to favorites</string>
    <string name="chapters">Chapters</string>
    <string name="characters">Characters</string>
    <string name="episode_title">Episode</string>
    <string name="character_name">Character</string>
    <string name="no_title">No title</string>
    <string name="no_episodes_found">No episodes found</string>
    <string name="no_characters_found">No characters found</string>
    <string name="chapter_title">Chapter</string>
    <string name="send_to">Send to...</string>
    <string name="no_genres_found">No genres found</string>
</resources>